fixed game images

--- a/play.html
+++ b/play.html
@@ -16,26 +16,26 @@
 <div class="row">
 <div class="col-6 col-md-3">
 <a class="gc2" href="/assets/gfiles/Subway Surfers/monaco.html">
-<img class="ft" alt="Subway Surfers" src="https://i.ibb.co/xSFH2JJ/image.png">
+<img class="ft" alt="Subway Surfers" src="https://iili.io/XCep2f.md.png">
 <h5>Subway Surfers</h5>
 </a>
 <!-- https://i.scdn.co/image/ab67616d0000b273222806e5d36a1eae01e9cd9a - https://www.friv5online.com/files/images/65/654f259a05bd00ac90b332f59bbb2584.jpg - https://i1.sndcdn.com/artworks-000581103005-ixk06w-t500x500.jpg - https://subwaysurfers.com/media/3aadwghz/bg.jpg -->
 </div>
 <div class="col-6 col-md-3">
 <a class="gc2" href="https://awokenyt.github.io/assets/gfiles/SpaceCompany/">
-<img class="ft" alt="Space Company" src="https://i.ibb.co/L5RHG4z/image.png">
+<img class="ft" alt="Space Company" src="https://iili.io/XCk2h7.png">
 <h5>Space Company</h5>
 </a>
 </div>
 <div class="col-6 col-md-3">
 <a class="gc2" href="/assets/gfiles/Basketball Stars/basketballstars.html">
-<img class="ft" alt="Basketball Stars" src="https://i.ibb.co/mzmRzc3/image.png">
+<img class="ft" alt="Basketball Stars" src="https://iili.io/XCk3Q9.png">
 <h5>Basketball Stars</h5>
 </a>
 </div>
 <div class="col-6 col-md-3">
 <a class="gc2" href="/assets/gfiles/Paper-io/paper-io.html">
-<img class="ft" alt="paper.io" src="https://i.ibb.co/ZzdcqWw/image.png">
+<img class="ft" alt="paper.io" src="https://iili.io/XCkC2j.png">
 <h5>Paper.io</h5>
 </a>
 </div>
@@ -45,7 +45,7 @@
 	
 <div class="col-md-2 col-sm-3 col-4">
 <a title="WBWWB" class="gc2" href="assets/gfiles/WBWWB/wbwwb.html">
-<img alt="WBWWB" src="https://i.ibb.co/vqwxYqH/image.png">
+<img alt="WBWWB" src="https://iili.io/XCknYx.png">
 <h6>WBWWB</h6>
 </a>
 </div>
@@ -57,37 +57,37 @@
 </div>
 <div class="col-md-2 col-sm-3 col-4">
 <a title="Cookie Clicker" class="gc2" href="assets/gfiles/CookieClicker/index.html">
-<img alt="Cookie Clicker" src="https://i.ibb.co/q5W6qD5/image.png">
+<img alt="Cookie Clicker" src="https://iili.io/XCkokQ.png">
 <h6>Cookie Clicker</h6>
 </a>
 </div>
 <div class="col-md-2 col-sm-3 col-4">
 <a title="Slope" class="gc2" href="/assets/gfiles/Slope/slope.html">
-<img alt="Slope" src="https://i.ibb.co/mT2LsRk/image.png">
+<img alt="Slope" src="https://iili.io/XCkxpV.png">
 <h6>Slope</h6>
 </a>
 </div>
 <div class="col-md-2 col-sm-3 col-4">
 <a title="xx142-b2.exe" class="gc2" href="assets/gfiles/xx142-b2exe/xx142-b2exe.html">
-<img alt="xx142-b2.exe" src="https://i.ibb.co/yWPFD93/image.png">
+<img alt="xx142-b2.exe" src="https://iili.io/XCkITB.png">
 <h6>xx142-b2.exe</h6>
 </a>
 </div>
 <div class="col-md-2 col-sm-3 col-4">
 <a title="Sans Fight Simulator" class="gc2" href="assets/gfiles/SansFightSimulator/sansfightsimulator.html">
-<img alt="Sans Fight Simulator" src="https://i.ibb.co/4mJd4YN/image.png">
+<img alt="Sans Fight Simulator" src="https://iili.io/XCkuQ1.png">
 <h6>Sans Fight Simualtor</h6>
 </a>
 </div>
 <div class="col-md-2 col-sm-3 col-4">
 <a title="2048" class="gc2" href="assets/gfiles/2048/index.html">
-<img alt="2048" src="https://i.ibb.co/KsB3XKP/image.png">
+<img alt="2048" src="https://iili.io/XCkRCF.png">
 <h6>2048</h6>
 </a>
 </div>
 <div class="col-md-2 col-sm-3 col-4">
 <a title="Retro Bowl" class="gc2" href="assets/gfiles/Retro Bowl/retrobowl.html">
-<img alt="Retro Bowl" src="https://i.ibb.co/vPmKCQh/Screen-Shot-2022-05-24-at-12-47-05-AM.png">
+<img alt="Retro Bowl" src="https://iili.io/XCk5Eg.png">
 <h6>Retro Bowl</h6>
 </a>
 </div>
