fixed all games and removed one game

--- a/assets/gfiles/Retro Bowl/retrobowl.html
+++ b/assets/gfiles/Retro Bowl/retrobowl.html
@@ -14,7 +14,7 @@
 <div class="alt">
 </div>
 <section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://retrobowlunblocked.com/games/retro-bowl-new/index.html" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
+<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://grandcanyonshuttles.com/uploads/5/5/6/7/5567194/custom_themes/226112567625258737/files/index.html" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
 </section>
 </body>
 </html>
