--- a/assets/gfiles/SansFightSimulator/sansfightsimulator.html
+++ b/assets/gfiles/SansFightSimulator/sansfightsimulator.html
@@ -14,7 +14,7 @@
 <div class="alt">
 </div>
 <section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://jcw87.github.io/c2-sans-fight/" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
+<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://gotoanddie.github.io/c2-sans-fight/" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
 </section>
 </body>
 </html>
