added new games

--- a/play.html
+++ b/play.html
@@ -85,6 +85,36 @@
 <h6>Retro Bowl</h6>
 </a>
 </div>
+<div class="col-md-2 col-sm-3 col-4">
+<a title="Stickman Hook" class="gc2" href="assets/gfiles/StickmanHook/stickman.html">
+<img alt="Stickman Hook" src="https://iili.io/XT2Nl2.md.png">
+<h6>Stickman Hook</h6>
+</a>
+</div>
+<div class="col-md-2 col-sm-3 col-4">
+<a title="Temple Run 2" class="gc2" href="assets/gfiles/Temple Run 2 /templerun2.html">
+<img alt="Temple Run 2" src="https://iili.io/XT3XmF.png">
+<h6>Temple Run 2</h6>
+</a>
+</div>
+<div class="col-md-2 col-sm-3 col-4">
+<a title="Drift Hunters" class="gc2" href="assets/gfiles/Drift Hunters/drifthunters.html">
+<img alt="Drift Hunters" src="https://iili.io/XT3Q14.png">
+<h6>Drift Hunters</h6>
+</a>
+</div>
+<div class="col-md-2 col-sm-3 col-4">
+<a title="1v1.lol" class="gc2" href="assets/gfiles/1v1lol/1v1lol.html">
+<img alt="1v1.lol" src="https://iili.io/XTnSMF.png">
+<h6>1v1.lol</h6>
+</a>
+</div>
+<div class="col-md-2 col-sm-3 col-4">
+<a title="Sonic The Hedgehog" class="gc2" href="assets/gfiles/sonicthehedgehog/sth.html">
+<img alt="Sonic The Hedgehog" src="https://iili.io/XTW3MX.png">
+<h6>Sonic The Hedgehog</h6>
+</a>
+</div>
 </div>
 </div>
 </div>
