--- a/play.html
+++ b/play.html
@@ -103,12 +103,12 @@
 <h6>Drift Hunters</h6>
 </a>
 </div>
-<div class="col-md-2 col-sm-3 col-4">
+<!--<div class="col-md-2 col-sm-3 col-4">
 <a title="1v1.lol" class="gc2" href="assets/gfiles/1v1lol/1v1lol.html">
 <img alt="1v1.lol" src="https://iili.io/XTnSMF.png">
 <h6>1v1.lol</h6>
 </a>
-</div>
+</div> -->
 <div class="col-md-2 col-sm-3 col-4">
 <a title="Sonic The Hedgehog" class="gc2" href="assets/gfiles/sonicthehedgehog/sth.html">
 <img alt="Sonic The Hedgehog" src="https://iili.io/XTW3MX.png">
