--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ div.features div div p {
             <p><br>Awoken's Games was made because of boredom it contains <strong>unblocked</strong> games that you can play at <strong>school</strong></p>
            <a href="play.html" class="play">Play</a> 
            <a href="developer.html" class="play">Developer</a>
-	  <a href="changelog.html" class="play">Changelog</a>
+	  <a href="https://forms.gle/4Zyrpyhz2rEbuV579" class="play">Request a Game</a>
          </div>
       </div>
       <script src="_footer.js" id="footer-script"></script>
