--- a/assets/gfiles/Basketball Stars/basketballstars.html
+++ b/assets/gfiles/Basketball Stars/basketballstars.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://rudolph-the-red-nosed-reindeer.ga/tmm-basketball-stars/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://awokenyt.github.io/gamestorage/basketballstars/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
 </section>
 </body>
 </html>
