--- a/assets/gfiles/Slope/slope.html
+++ b/assets/gfiles/Slope/slope.html
@@ -14,7 +14,7 @@
 <div class="alt">
 </div>
 <section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://slope-unblocked--jimmy-leewhybro.repl.co/" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
+<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://awokenyt.github.io/gamestorage/slope/" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
 </section>
 </body>
 </html>
