--- a/assets/gfiles/WBWWB/wbwwb.html
+++ b/assets/gfiles/WBWWB/wbwwb.html
@@ -14,7 +14,7 @@
 <div class="alt">
 </div>
 <section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://moyaimoment.github.io/wbwwb/wbwwb.html" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
+<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://awokenyt.github.io/gamestorage/wbwwb/" style="border-radius: 1%; height: 548px; width: 960px;"></iframe>
 </section>
 </body>
 </html>
