removed search bar until i can make it work

--- a/changelog.html
+++ b/changelog.html
@@ -127,6 +127,7 @@ div {
     <a href="changelog.html">Changelog</a>
 </p>
 	    <h1 align="center"><br>Latest Changes 📜<br></h1>
+      <li><a>5/27/22 | [UI ADDED] New navigation bar | [NEW GAMES] Craftmine was added</a></li>
       <li><a>5/24/2022 | [NEW UI] New play ui | [NEW GAMES] Much more new games</a></li>
       <li><a>4/7/2022 | [NEW GAMES] Space Company and Minecraft 1.5.2</a></li>
       <li><a>10/27/2021 | [NEW GAME] Minecraft Classic</a></li>
