--- a/play.html
+++ b/play.html
@@ -20,26 +20,21 @@
         </div>
         <ul class="nav-list">
           <li>
-              <i class='bx bx-search' ></i>
-             <input type="text" placeholder="Search...">
-             <span class="tooltip">Search</span>
-          </li>
-          <li>
-            <a href="#">
+            <a href="index.html">
               <i class='bx bx-home-alt-2' ></i>
               <span class="links_name">Home</span>
             </a>
              <span class="tooltip">Home</span>
           </li>
           <li>
-           <a href="#">
+           <a href="changelog.html">
             <i class='bx bx-bar-chart-alt-2' ></i>
              <span class="links_name">Changelog</span>
            </a>
            <span class="tooltip">Changelog</span>
          </li>
          <li>
-           <a href="#">
+           <a href="developer.html">
             <i class='bx bx-code-alt' ></i>
              <span class="links_name">Developer</span>
            </a>
