--- a/play.html
+++ b/play.html
@@ -179,6 +179,12 @@
 <h6>Craftmine</h6>
 </a>
 </div>
+<div class="col-md-2 col-sm-3 col-4">
+<a title="Pokemon Fire Red" class="gc2" href="assets/gfiles/craftmine/craftmine.html">
+<img alt="Pokemon Fire Red" src="https://iili.io/X1bGrg.png">
+<h6>Pokemon Fire Red</h6>
+</a>
+</div>
 </div>
 </div>
 </div>
