--- a/assets/gfiles/pokemonfirered/pfd.html
+++ b/assets/gfiles/pokemonfirered/pfd.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Awoken's Games | Subway Surfers: Monaco</title>
-<meta charset="utf-8">
-<meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
-<meta content='no-referrer' name='referrer'/>
-<meta content="Awoken's Games | Subway Surfers: Monaco" name="description">
-<link rel="shortcut icon" href="https://1.bp.blogspot.com/-VWGF3y9L4tg/YTi6RCxcYbI/AAAAAAAAACs/7F-4J4xdko8D19qr2k_Ao9vYg7GV7wLSACLcBGAsYHQ/w16-h16-c/subway-surfers-monaco.jpg">
-<!-- CSS -->
-<link rel="stylesheet" href="/user_css/game.css" />
+    <title>Awoken's Games | Pokemon Fire Red</title>
+    <meta charset="utf-8">
+    <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
+    <meta content='no-referrer' name='referrer' />
+    <meta content="Awoken's Games | Pokemon Fire Red" name="description">
+    <link rel="shortcut icon" href="https://iili.io/X1bGrg.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/user_css/game.css" />
 </head>
+
 <body>
-<div class="alt">
-</div>
-<section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://theclashman2.github.io/GBA-Emulator/launcher.html#pokemonred" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
-</section>
+    <div class="alt">
+    </div>
+    <section class="content">
+        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://theclashman2.github.io/GBA-Emulator/launcher.html#pokemonred" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+    </section>
+
+    <button class="fullscreen_button" onclick="openFullscreen()">Open in fullscreen</button>
+    <script>
+        var elem = document.getElementById("mygame");
+
+        function openFullscreen() {
+            if (elem.requestFullscreen) {
+                elem.requestFullscreen();
+            } else if (elem.webkitRequestFullscreen) { /* Safari */
+                elem.webkitRequestFullscreen();
+            } else if (elem.msRequestFullscreen) { /* IE11 */
+                elem.msRequestFullscreen();
+            }
+        }
+    </script>
 </body>
+
 </html>
