custom scrollbar and new game

--- a/assets/gfiles/pokemonfirered/pfd.html
+++ b/assets/gfiles/pokemonfirered/pfd.html
@@ -16,10 +16,10 @@
     <div class="alt">
     </div>
     <section class="content">
-        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://theclashman2.github.io/GBA-Emulator/launcher.html#pokemonred" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://awokenyt.github.io/gamestorage/gbagames/launcher.html#pokemonred" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
 
-    <button class="fullscreen_button" onclick="openFullscreen()">Open in fullscreen</button>
+    <button class="fullscreen_button" onclick="openFullscreen()">Open in fullscreen</button> 
     <script>
         var elem = document.getElementById("mygame");
 
