added controls on pfr

--- a/assets/gfiles/pokemonfirered/pfd.html
+++ b/assets/gfiles/pokemonfirered/pfd.html
@@ -19,7 +19,10 @@
         <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://awokenyt.github.io/gamestorage/gbagames/launcher.html#pokemonred" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
 
-    <button class="fullscreen_button" onclick="openFullscreen()">Open in fullscreen</button> 
+    <p class="controls">Controls: <br>Start: Enter<br>Select: Shift<br>A: X<br> B: Z<br> L: 1<br> R:2<br>D-Pad: Arrow Keys
+    </p>
+
+    <button class="fullscreen_button" onclick="openFullscreen()">Open in fullscreen</button>
     <script>
         var elem = document.getElementById("mygame");
 
