maybe added something better

--- a/play.html
+++ b/play.html
@@ -188,6 +188,12 @@
                     <h6>Pokemon Collection</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Street Fighter Alpha 3" class="gc2" href="assets/gfiles/streetfighter/sfalpha3.html">
+                    <img alt="Street Fighter Alpha 3" src="https://iili.io/XXndE7.png">
+                    <h6>Street Fighter Alpha 3</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
