--- a/assets/gfiles/pokemoncollection/pokemonsapphire.html
+++ b/assets/gfiles/pokemoncollection/pokemonsapphire.html
@@ -16,6 +16,8 @@
     <div class="alt">
     </div>
     <section class="content">
+        <img class="fullscreen_button" src="https://iili.io/XXAAVj.png" width="35" height="35" onclick="openFullscreen();" />
+        <img class="controls_button" src="https://iili.io/XXRVp9.png" width="50" height="50" onclick="tellControls()" />
         <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://awokenyt.github.io/gamestorage/gbagames/launcher.html#pokemonsapphire" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
 
@@ -31,6 +33,10 @@
             } else if (elem.msRequestFullscreen) { /* IE11 */
                 elem.msRequestFullscreen();
             }
+        }
+
+        function tellControls() {
+            alert("Start: Enter | Select: Shift | A: X | B: Z | L: 1 | R: 2 | D-Pad: Arrow keys.")
         }
     </script>
 </body>
