--- a/play.html
+++ b/play.html
@@ -194,6 +194,12 @@
                     <h6>Street Fighter Alpha 3</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Smash Karts" class="gc2" href="assets/gfiles/smashkarts/smashkarts.html">
+                    <img alt="Smash Karts" src="https://iili.io/XXtNov.png">
+                    <h6>Smash Karts</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
