--- a/play.html
+++ b/play.html
@@ -194,6 +194,12 @@
                     <h6>Street Fighter Alpha 3</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="1v1.lol" class="gc2" href="assets/gfiles/1v1lol/1v1lol.html">
+                    <img alt="1v1.lol" src="https://iili.io/XgrjON.png">
+                    <h6>1v1.lol</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
