--- a/assets/gfiles/1v1lol/1v1lol.html
+++ b/assets/gfiles/1v1lol/1v1lol.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Awoken's Games | 1v1.lol</title>
-<meta charset="utf-8">
-<meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
-<meta content='no-referrer' name='referrer'/>
-<meta content="Awoken's Games | 1v1.lol" name="description">
-<link rel="shortcut icon" href="https://iili.io/XTnSMF.png">
-<!-- CSS -->
-<link rel="stylesheet" href="/user_css/game.css" />
+    <title>Awoken's Games | 1v1.lol</title>
+    <meta charset="utf-8">
+    <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
+    <meta content='no-referrer' name='referrer' />
+    <meta content="Awoken's Games | 1v1.lol" name="description">
+    <link rel="shortcut icon" href="https://iili.io/XgrjON.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/user_css/game.css" />
 </head>
+
 <body>
-<div class="alt">
-</div>
-<section class="content">
-<iframe style="width: 100%; height: 100%" frameborder="0" src="https://rudolph-the-red-nosed-reindeer.ga/tam-pointerlock-friendly/?url=https://advanced-channeler.02.gz-associates.com/?t=tam-1v1-lol"></iframe>
-</section>
+    <div class="alt">
+    </div>
+    <section class="content">
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.fractionsarecool.gq/gamestorage/1v1lol/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+    </section>
 </body>
+
 </html>
