--- a/play.html
+++ b/play.html
@@ -200,6 +200,12 @@
                     <h6>1v1.lol</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Kirby & The Amazing Mirror" class="gc2" href="assets/gfiles/kirby/kirby.html">
+                    <img alt="Kirby & The Amazing Mirror" src="https://iili.io/XgLQLB.png">
+                    <h6>Kirby & The Amazing Mirror</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
