--- a/play.html
+++ b/play.html
@@ -206,6 +206,18 @@
                     <h6>Kirby & The Amazing Mirror</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Burrito Bison: Launcha Libre" class="gc2" href="assets/gfiles/burritobison/burritobison.html">
+                    <img alt="Burrito Bison: Launcha Libre" src="https://iili.io/X4W7dF.png">
+                    <h6>Burrito Bison: Launcha Libre</h6>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Tunnel Rush" class="gc2" href="assets/gfiles/tunnelrush/tunnelrush.html">
+                    <img alt="Tunnel Rush" src="https://iili.io/X4XL8X.png">
+                    <h6>Tunnel Rush</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
