--- a/assets/gfiles/StickmanHook/stickman.html
+++ b/assets/gfiles/StickmanHook/stickman.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Awoken's Games | Stickman Hook</title>
-<meta charset="utf-8">
-<meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
-<meta content='no-referrer' name='referrer'/>
-<meta content="Awoken's Games | Stickman Hook" name="description">
-<link rel="shortcut icon" href="https://iili.io/XT2Nl2.md.png">
-<!-- CSS -->
-<link rel="stylesheet" href="/user_css/game.css" />
+    <title>Awoken's Games | Stickman Hook</title>
+    <meta charset="utf-8">
+    <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
+    <meta content='no-referrer' name='referrer' />
+    <meta content="Awoken's Games | Stickman Hook" name="description">
+    <link rel="shortcut icon" href="https://iili.io/XT2Nl2.md.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/user_css/game.css" />
 </head>
+
 <body>
-<div class="alt">
-</div>
-<section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://awokenyt.github.io/gamestorage/stickmanhook/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
-</section>
+    <div class="alt">
+    </div>
+    <section class="content">
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="http://gamestorage.epizy.com/games/stickmanhook/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+    </section>
 </body>
+
 </html>
