--- a/assets/gfiles/StickmanHook/stickman.html
+++ b/assets/gfiles/StickmanHook/stickman.html
@@ -16,7 +16,7 @@
     <div class="alt">
     </div>
     <section class="content">
-        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="http://gamestorage.epizy.com/games/stickmanhook/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.monkeyturkey.cf/games/stickmanhook/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
 </body>
 
