--- a/assets/gfiles/xx142-b2exe/xx142-b2exe.html
+++ b/assets/gfiles/xx142-b2exe/xx142-b2exe.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Awoken's Games | xx142-b2.exe</title>
-<meta charset="utf-8">
-<meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
-<meta content='no-referrer' name='referrer'/>
-<meta content="Awoken's Games | xx142-b2.exe" name="description">
-<link rel="shortcut icon" href="https://i.ibb.co/yWPFD93/image.png">
-<!-- CSS -->
-<link rel="stylesheet" href="/user_css/game.css" />
+    <title>Awoken's Games | xx142-b2.exe</title>
+    <meta charset="utf-8">
+    <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
+    <meta content='no-referrer' name='referrer' />
+    <meta content="Awoken's Games | xx142-b2.exe" name="description">
+    <link rel="shortcut icon" href="https://i.ibb.co/yWPFD93/image.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/user_css/game.css" />
 </head>
+
 <body>
-<div class="alt">
-</div>
-<section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://js13kgames.com/games/xx142-b2exe/index.html" style="border-radius: 1%; height: 570px; width: 960px;"></iframe>
-</section>
+    <div class="alt">
+    </div>
+    <section class="content">
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.monkeyturkey.cf/games/xx142-b2exe/" style="border-radius: 1%; height: 600px; width: 960px;"></iframe>
+    </section>
 </body>
+
 </html>
