--- a/play.html
+++ b/play.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-6 col-md-3">
                 <a class="gc2" href="/assets/gfiles/Subway Surfers/monaco.html">
-                    <img class="ft" alt="Subway Surfers" src="https://iili.io/XCep2f.md.png">
+                    <img class="ft" alt="Subway Surfers" src="https://iili.io/Xbai2p.png">
                     <h5>Subway Surfers</h5>
                 </a>
                 <!-- https://i.scdn.co/image/ab67616d0000b273222806e5d36a1eae01e9cd9a - https://www.friv5online.com/files/images/65/654f259a05bd00ac90b332f59bbb2584.jpg - https://i1.sndcdn.com/artworks-000581103005-ixk06w-t500x500.jpg - https://subwaysurfers.com/media/3aadwghz/bg.jpg -->
@@ -103,13 +103,6 @@
 
 
             <!-- 6 -->
-
-            <div class="col-md-2 col-sm-3 col-4">
-                <a title="WBWWB" class="gc2" href="assets/gfiles/WBWWB/wbwwb.html">
-                    <img alt="WBWWB" src="https://iili.io/XCknYx.png">
-                    <h6>WBWWB</h6>
-                </a>
-            </div>
             <div class="col-md-2 col-sm-3 col-4">
                 <a title="Cookie Clicker" class="gc2" href="assets/gfiles/CookieClicker/index.html">
                     <img alt="Cookie Clicker" src="https://iili.io/XCkokQ.png">
@@ -164,12 +157,6 @@
                     <h6>Drift Hunters</h6>
                 </a>
             </div>
-            <!--<div class="col-md-2 col-sm-3 col-4">
-<a title="1v1.lol" class="gc2" href="assets/gfiles/1v1lol/1v1lol.html">
-<img alt="1v1.lol" src="https://iili.io/XTnSMF.png">
-<h6>1v1.lol</h6>
-</a>
-</div> -->
             <div class="col-md-2 col-sm-3 col-4">
                 <a title="Sonic The Hedgehog" class="gc2" href="assets/gfiles/sonicthehedgehog/sth.html">
                     <img alt="Sonic The Hedgehog" src="https://iili.io/XTW3MX.png">
