fix for gba games

--- a/assets/gfiles/pokemoncollection/pfd.html
+++ b/assets/gfiles/pokemoncollection/pfd.html
@@ -18,7 +18,7 @@
     <section class="content">
         <img class="fullscreen_button" src="https://iili.io/XXAAVj.png" width="35" height="35" onclick="openFullscreen();" />
         <img class="controls_button" src="https://iili.io/XXRVp9.png" width="50" height="50" onclick="tellControls()" />
-        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://awokenyt.github.io/gamestorage/gbagames/launcher.html#pokemonred" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.fractionsarecool.gq/gamestorage/gbagames/launcher.html#pokemonred" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
 
     <script>
