--- a/play.html
+++ b/play.html
@@ -83,7 +83,7 @@
                 <!-- https://i.scdn.co/image/ab67616d0000b273222806e5d36a1eae01e9cd9a - https://www.friv5online.com/files/images/65/654f259a05bd00ac90b332f59bbb2584.jpg - https://i1.sndcdn.com/artworks-000581103005-ixk06w-t500x500.jpg - https://subwaysurfers.com/media/3aadwghz/bg.jpg -->
             </div>
             <div class="col-6 col-md-3">
-                <a class="gc2" href="https://awokenyt.github.io/assets/gfiles/SpaceCompany/">
+                <a class="gc2" href="https://www.fractionsarecool.gq/assets/gfiles/SpaceCompany/">
                     <img class="ft" alt="Space Company" src="https://iili.io/XCk2h7.png">
                     <h5>Space Company</h5>
                 </a>
