--- a/assets/gfiles/smashkarts/smashkarts.html
+++ b/assets/gfiles/smashkarts/smashkarts.html
@@ -17,7 +17,7 @@
     </div>
     <section class="content">
         <img class="fullscreen_button" src="https://iili.io/XXAAVj.png" width="35" height="35" onclick="openFullscreen();" />
-        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://awokenyt.github.io/gamestorage/smashkarts/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.fractionsarecool.gq/gamestorage/smashkarts/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
     <script>
         var elem = document.getElementById("mygame");
