--- a/assets/gfiles/sonicthehedgehog/sth.html
+++ b/assets/gfiles/sonicthehedgehog/sth.html
@@ -16,7 +16,7 @@
     <div class="alt">
     </div>
     <section class="content">
-        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.fractionsarecool.gq/gamestorage/ultimateflashsonic/" style="border-radius: 1%; height: 480px; width: 620px;"></iframe>
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.monkeyturkey.cf/games/ultimateflashsonic/" style="border-radius: 1%; height: 480px; width: 620px;"></iframe>
     </section>
 </body>
 
