added few games

--- a/play.html
+++ b/play.html
@@ -205,6 +205,30 @@
                     <h6>Tunnel Rush</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Moto X3M" class="gc2" href="assets/gfiles/motox3m/motox3m.html">
+                    <img alt="Moto X3M" src="https://iili.io/XbZFHb.png">
+                    <h6>Moto X3M</h6>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Madalin Stunt Cars 3" class="gc2" href="assets/gfiles/madalinstuntcars/madalinstuntcars.html">
+                    <img alt="Madalin Stunt Cars 3" src="https://iili.io/Xbt1hQ.png">
+                    <h6>Madalin Stunt Cars 3</h6>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Vex 6" class="gc2" href="assets/gfiles/vex6/vex6.html">
+                    <img alt="Vex 6" src="https://iili.io/XbteTv.png">
+                    <h6>Vex 6</h6>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Vex 6" class="gc2" href="assets/gfiles/papaspizzeria/papa.html">
+                    <img alt="Vex 6" src="https://iili.io/XbDhV2.png">
+                    <h6>Vex 6</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
