--- a/assets/gfiles/1v1lol/1v1lol.html
+++ b/assets/gfiles/1v1lol/1v1lol.html
@@ -16,7 +16,7 @@
     <div class="alt">
     </div>
     <section class="content">
-        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.fractionsarecool.gq/gamestorage/1v1lol/" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://yexex.github.io/lol/index.html" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
 </body>
 
