--- a/play.html
+++ b/play.html
@@ -146,7 +146,7 @@
                 </a>
             </div>
             <div class="col-md-2 col-sm-3 col-4">
-                <a title="Temple Run 2" class="gc2" href="assets/gfiles/Temple Run 2 /templerun2.html">
+                <a title="Temple Run 2" class="gc2" href="assets/gfiles/templerun2/templerun2.html">
                     <img alt="Temple Run 2" src="https://iili.io/XT3XmF.png">
                     <h6>Temple Run 2</h6>
                 </a>
