added bio evil 4

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Reogorn's Games | 404</title>
+        <title>Echo's Games | 404</title>
         <meta charset="UTF-8">
 	<meta name="theme-color" content="#36393F">
         <meta property="og:image:url" content="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
