--- a/assets/gfiles/Basketball Stars/basketballstars.html
+++ b/assets/gfiles/Basketball Stars/basketballstars.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Asleep Games | Basketball Stars</title>
+    <title>Echo's Games | Basketball Stars</title>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
     <meta content='no-referrer' name='referrer' />
-    <meta content="Asleep Games | Basketball Stars" name="description">
+    <meta content="Echo's Games | Basketball Stars" name="description">
     <link rel="shortcut icon" href="https://iili.io/XCk3Q9.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/user_css/game.css" />
