--- a/changelog.html
+++ b/changelog.html
@@ -14,7 +14,7 @@ Thanks for taking a look at the source code! Maybe leave me a follow and subscri
 <html>
 
 <head>
-    <title>Reogorn's Games | Changelog</title>
+    <title>Echo's Games | Changelog</title>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#36393F">
     <meta property="og:image:url" content="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
