--- a/developer.html
+++ b/developer.html
@@ -13,7 +13,7 @@ Thanks for taking a look at the source code! Maybe leave me a follow and subscri
 
 <html>
     <head>
-        <title>Reogorn's Games | Developer</title>
+        <title>Echo's Games | Developer</title>
         <meta charset="UTF-8">
 	<meta name="theme-color" content="#36393F">
         <meta property="og:image:url" content="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
@@ -122,10 +122,10 @@ div {
    ﹒ 
     <a href="changelog.html">Changelog</a>
 </p>
-	    <h1 align="center"><br>@Reogorn<br></h1> 
+	    <h1 align="center"><br>@Echo<br></h1> 
 <div>
   <p align="center">
-    <img src="https://64.media.tumblr.com/8c9b4d6d4d1c6551aa19d8b597eeac06/5cbb376acdd33a47-82/s500x750/31fc54ce08e764e03b5d564511f03cd4854fe527.gifv" width="15%">
+    <img src="https://iili.io/Hncrk4j.gif" width="15%">
     <br>
     <div align="center">
       <br>My lightskin stare<br><br>
