--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ Thanks for taking a look at the source code! Maybe leave me a follow and subscri
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Reogorn's's Games | Home</title>
-      <meta name="keywords" content="Reogorn, Reogorn's Games, Unblocked Games">
+      <title>Echo's's Games | Home</title>
+      <meta name="keywords" content="Echo's, Echo's Games, Unblocked Games">
       <meta name="theme-color" content="#36393F">
         <meta property="og:image:url" content="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
         <meta property="og:image:secure_url" content="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
         <meta name="description" content="Play games online for free, unblocked!">
         <link rel="icon" type="image/jpeg" sizes="180x180" href="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
-      <title>Reogorn's Games</title>
+      <title>Echo's Games</title>
      
      <style>
 	     body {
@@ -332,10 +332,10 @@ div.features div div p {
 <div class="top-greeting" id="home">
   <div class="center-box">
 
-            <h1><strong>Reogorn's Games</strong></h1>
+            <h1><strong>Echo's Games</strong></h1>
            <h2><strong>Just play the games</strong></h2>
 <h2><strong>_____________________</strong></h2>
-            <p><br>Reogorn's Games was made because of boredom and it gives you <strong>unblocked</strong> games that you can play at <strong>school</strong></p>
+            <p><br>Echo's Games was made because of boredom and it gives you <strong>unblocked</strong> games that you can play at <strong>school</strong></p>
            <a href="play.html" class="play">Play</a> 
            <a href="developer.html" class="play">Developer</a>
 	  <a href="https://forms.gle/4Zyrpyhz2rEbuV579" class="play">Request a Game</a>
