--- a/maintence.html
+++ b/maintence.html
@@ -16,7 +16,7 @@ Thanks for taking a look at the source code! Maybe leave me a follow and subscri
 <head>
     <meta charset="utf-8">
     <title>Site Maintence</title>
-    <meta name="keywords" content="Reogorn, Reogorn's Games, Unblocked Games">
+    <meta name="keywords" content="Echo's, Echo's Games, Unblocked Games">
     <meta name="theme-color" content="#36393F">
     <meta property="og:image:url" content="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
     <meta property="og:image:secure_url" content="https://i.ibb.co/C7x8k9D/vtk87pxrg4k71.png">
@@ -59,7 +59,7 @@ Thanks for taking a look at the source code! Maybe leave me a follow and subscri
         <h1>Site Maintence</h1>
         <div>
             <p>My bad bro, I may be making some huge updates right now. If you still wanna use the site when only some games work then press <a href="index copy.html">here</a></p>
-            <p>&mdash; Reogorn</p>
+            <p>&mdash; Echo's</p>
         </div>
     </article>
     </body>
