--- a/play.html
+++ b/play.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Reogorn's Games | Play</title>
+    <title>Echo's Games | Play</title>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
     <meta content='no-referrer' name='referrer' />
@@ -17,7 +17,7 @@
 <body>
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Reogorn's Games</div>
+            <div class="logo_name">Echo's Games</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -235,7 +235,12 @@
                     <h6>FNF Collection</h6>
                 </a>
             </div>
-
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Bio Evil 4" class="gc2" href="assets/gfiles/bioevil4/bioevil4.html">
+                    <img alt="Bio Evil 4" src="https://iili.io/Hnc4SPs.png">
+                    <h6>Bio Evil 4</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
