--- a/assets/gfiles/Drift Hunters/drifthunters.html
+++ b/assets/gfiles/Drift Hunters/drifthunters.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Reogorn's Games | Drift Hunters</title>
+<title>Echo's Games | Drift Hunters</title>
 <meta charset="utf-8">
 <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
 <meta content='no-referrer' name='referrer'/>
-<meta content="Reogorn's Games | Drift Hunters" name="description">
+<meta content="Echo's Games | Drift Hunters" name="description">
 <link rel="shortcut icon" href="https://iili.io/XT3Q14.png">
 <!-- CSS -->
 <link rel="stylesheet" href="/user_css/game.css" />
