--- a/assets/gfiles/Retro Bowl/retrobowl.html
+++ b/assets/gfiles/Retro Bowl/retrobowl.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Reogorn's Games | Retro Bowl</title>
+    <title>Echo's Games | Retro Bowl</title>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
     <meta content='no-referrer' name='referrer' />
-    <meta content="Reogorn's Games | Retro Bowl" name="description">
+    <meta content="Echo's Games | Retro Bowl" name="description">
     <link rel="shortcut icon" href="https://i.ibb.co/vPmKCQh/Screen-Shot-2022-05-24-at-12-47-05-AM.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/user_css/game.css" />
