--- a/assets/gfiles/SansFightSimulator/sansfightsimulator.html
+++ b/assets/gfiles/SansFightSimulator/sansfightsimulator.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Reogorn's Games | Sans Fight Simulator</title>
+<title>Echo's Games | Sans Fight Simulator</title>
 <meta charset="utf-8">
 <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
 <meta content='no-referrer' name='referrer'/>
-<meta content="Reogorn's Games | Sans Fight Simulator" name="description">
+<meta content="Echo's Games | Sans Fight Simulator" name="description">
 <link rel="shortcut icon" href="https://i.ibb.co/4mJd4YN/image.png">
 <!-- CSS -->
 <link rel="stylesheet" href="/user_css/game.css" />
