--- a/assets/gfiles/bioevil4/bioevil4.html
+++ b/assets/gfiles/bioevil4/bioevil4.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <title>Echo's Games | Kirby & The Amazing Mirror</title>
+    <title>Echo's Games | Mystery Dungeon: Red</title>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
     <meta content='no-referrer' name='referrer' />
-    <meta content="Echo's Games | Kirby & The Amazing Mirror" name="description">
-    <link rel="shortcut icon" href="https://iili.io/XgLQLB.png">
+    <meta content="Echo's Games | Pokemon Mystery Dungeon: Red" name="description">
+    <link rel="shortcut icon" href="https://iili.io/XMyU5F.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/user_css/game.css" />
 </head>
@@ -17,8 +17,8 @@
     </div>
     <section class="content">
         <img class="fullscreen_button" src="https://iili.io/XXAAVj.png" width="35" height="35" onclick="openFullscreen();" />
-        <img class="controls_button" src="https://iili.io/XXRVp9.png" width="50" height="50" onclick="tellControls()" />
-        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://www.fractionsarecool.gq/gamestorage/gbagames/launcher.html#kirbymirror" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
+        <img class="controls_button" src="https://iili.io/HncihSj.png" width="50" height="50" onclick="tellControls()" />
+        <iframe id="mygame" sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://v6p9d9t4.ssl.hwcdn.net/html/1076464/index.html" style="border-radius: 1%; height: 600px; width: 1067px;"></iframe>
     </section>
 
     <script>
@@ -35,7 +35,7 @@
         }
 
         function tellControls() {
-            alert("Start: Enter | Select: Shift | A: X | B: Z | L: 1 | R: 2 | D-Pad: Arrow keys.")
+            alert("Select: X | Navigate: WASD or Arrows Keys")
         }
     </script>
 </body>
