--- a/assets/gfiles/fnfcollection/index.html
+++ b/assets/gfiles/fnfcollection/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reogorn's Games | FNF Collection</title>
+    <title>Echo's Games | FNF Collection</title>
     <link rel="stylesheet" href="home.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
