--- a/assets/gfiles/sonicthehedgehog/sth.html
+++ b/assets/gfiles/sonicthehedgehog/sth.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Reogorn's Games | Sonic the Hedgehog</title>
+    <title>Echo's Games | Sonic the Hedgehog</title>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
     <meta content='no-referrer' name='referrer' />
-    <meta content="Reogorn's Games | Sonic the Hedgehog" name="description">
+    <meta content="Echo's Games | Sonic the Hedgehog" name="description">
     <link rel="shortcut icon" href="https://iili.io/XT3XmF.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/user_css/game.css" />
