--- a/assets/gfiles/xx142-b2exe/xx142-b2exe.html
+++ b/assets/gfiles/xx142-b2exe/xx142-b2exe.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Reogorn's Games | xx142-b2.exe</title>
+    <title>Echo's Games | xx142-b2.exe</title>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport' />
     <meta content='no-referrer' name='referrer' />
-    <meta content="Reogorn's Games | xx142-b2.exe" name="description">
+    <meta content="Echo's Games | xx142-b2.exe" name="description">
     <link rel="shortcut icon" href="https://i.ibb.co/yWPFD93/image.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/user_css/game.css" />
