--- a/play.html
+++ b/play.html
@@ -241,6 +241,12 @@
                     <h6>Bio Evil 4</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Super Mario 64" class="gc2" href="assets/gfiles/mario64/index.html">
+                    <img alt="Super Mario 64" src="https://iili.io/HncZP1t.jpg">
+                    <h6>Super Mario 64</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
