added jetpack joyride

--- a/play.html
+++ b/play.html
@@ -247,6 +247,12 @@
                     <h6>Super Mario 64</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Jetpack Joyride" class="gc2" href="assets/gfiles/jetpackjoyride/index.html">
+                    <img alt="Jetpack Joyride" src="https://iili.io/HnlHTVj.webp">
+                    <h6>Jetpack Joyride</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
