--- a/play.html
+++ b/play.html
@@ -247,6 +247,12 @@
                     <h6>Super Mario 64</h6>
                 </a>
             </div>
+            <div class="col-md-2 col-sm-3 col-4">
+                <a title="Rooftop Snipers" class="gc2" href="assets/gfiles/rooftopSnipers/rooftop.html">
+                    <img alt="Rooftop Snipers" src="https://iili.io/HnZK8QI.png">
+                    <h6>Rooftop Snipers</h6>
+                </a>
+            </div>
         </div>
     </div>
 </div>
